# plain-transformers

./: .flake8  .gitignore  .pylintrc  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_tests.yaml  pypi_release.yaml
plain_transformers/: common_layers.py  post_ln_decoder.py  post_ln_encoder.py  pre_ln_encoder.py  utils.py
plain_transformers/layers/: post_ln_decoder.py
plain_transformers/models/: transformer.py
src/plain_transformers/: __init__.py  yttm_tokenizer.py
src/plain_transformers/initializations/: __init__.py  initializations.py
src/plain_transformers/layers/: __init__.py  common_layers.py  post_ln_decoder.py  post_ln_encoder.py  pre_ln_encoder.py  transformer_decoder.py  transformer_encoder.py  utils.py
src/plain_transformers/losses/: __init__.py  label_smoothing_loss.py  unlikelihood_loss.py
src/plain_transformers/models/: __init__.py  multimodal_transformer.py  transformer.py
src/plain_transformers/samplers/: __init__.py  base_sampler.py  greedy_sampler.py  nucleus_sampler.py
src/plain_transformers/schedulers/: __init__.py  noam_scheduler.py
tests/: test_common_layers.py  test_label_smoothing_loss.py  test_model_initialization.py  test_unlikelihood_loss.py  test_utils.py  test_yttm_tokenizer.py
tests/test_data/: lorem_ipsum.txt  test_yttm_tokenizer.model
