# Copyright 2021 c00k1ez (https://github.com/c00k1ez). All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool:pytest]
norecursedirs =
    .git
    dist
    build
python_files =
    test_*.py
# doctest_plus = disabled
addopts =
    --strict
    --doctest-modules
    --color=yes
markers =
    slow
    remote_data
    filterwarnings
    gpus_param_tests
junit_duration_report = call

[flake8]
ignore = D203,F401,E203,W503,E231
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    build,
    dist,
    .pytest_cache,
    .vscode
max-complexity = 10
max-line-length = 119

[isort]
profile=black
src_paths=src # ,tests
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True

[metadata]
license_file = LICENSE
description-file = README.md